--- a/fpm.toml
+++ b/fpm.toml
@@ -10,10 +10,11 @@ auto-executables = true
 auto-tests = true
 auto-examples = true
 
+
 [install]
 library = false
 
 [fortran]
 implicit-typing = false
-implicit-external = false
+implicit-external = true
 source-form = "free"
